--- a/test-selection/index.html
+++ b/test-selection/index.html
@@ -325,11 +325,18 @@
                         </svg></span>Conformance Class 2: 'INSPIRE data sets and data set series interoperability metadata' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/metadata/2.0/isdss">source</a>)</label>
                   </div>
                   <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="metadata-20-dataset-options-4"
-                      name="checkbox-default" value="conformanceclass2ds" ng-click="selectMetadataAdvancedConformanceClass2bds()"/><label class="ecl-checkbox__label" for="metadata-20-dataset-options-4"><span
+                      name="checkbox-default" value="conformanceclass2bds" ng-click="selectMetadataAdvancedConformanceClass2bds()"/><label class="ecl-checkbox__label" for="metadata-20-dataset-options-4"><span
                         class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
                           class="ecl-checkbox__icon ecl-icon ecl-icon--s">
                           <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
                         </svg></span>Conformance Class 2b: 'INSPIRE data sets and data set series metadata for Monitoring' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/metadata/2.0/monitoring">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="metadata-20-dataset-options-5"
+                      name="checkbox-default" value="conformanceclass2cds" ng-click="selectMetadataAdvancedConformanceClass2cds()"/><label class="ecl-checkbox__label" for="metadata-20-dataset-options-5"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 2c: 'INSPIRE data sets and data set series metadata for IACS' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/metadata/2.0/iacs">source</a>)</label>
                   </div>
                 </fieldset>
                 <!-- 2.0 & networkservice -->
@@ -5278,14 +5285,14 @@
             <legend class="ecl-form-label" ng-show="select.typeResource == 'downloadservice'">Specify the service details</legend>
             <legend class="ecl-form-label" ng-show="select.typeResource == 'discoveryservice'">Specify the service details</legend>
             <legend class="ecl-form-label" ng-show="select.typeResource == 'dataset'">Select the input type and upload or link the resource</legend>
-            <span ng-show="select.fileUploadType == 'upload' && select.typeResource == 'metadata'">Select one or multiple XML/GML files or ZIP files containing XML/GML files. The Maximum size of each uploaded file is 50 MB. The upload starts immediately after selecting the files. The 'Start' button is unlocked when the upload has been successfully completed.<br/><br/></span>
-            <span ng-show="select.fileUploadType == 'remote' && select.typeResource == 'metadata'">Provide a URL to remote XML/GML file or a ZIP file containing XML/GML files, either from a request to an INSPIRE Spatial Data Service endpoint or a file repository. The download will be initiated after clicking on the 'Start' button. This download has a timeout of 120s.<br/><br/></span>
-            <span ng-show="select.typeResource == 'viewservice'">The system can process multiple files at once. Please enter a getCapabilities request to your service.<br/><br/></span>
-            <span ng-show="select.typeResource == 'downloadservice' && select.downloadServiceType != 'OGC'">The system can process multiple files at once. Please enter a getCapabilities request to your service.<br/><br/></span>
+            <span ng-show="select.fileUploadType == 'upload' && select.typeResource == 'metadata'">Select an XML file or a ZIP file containing one or multiple XML files. The Maximum size of the uploaded file is 50 MB. The upload starts immediately after selecting the files. The 'Start' button is unlocked when the upload has been successfully completed.<br/><br/></span>
+            <span ng-show="select.fileUploadType == 'remote' && select.typeResource == 'metadata'">Provide a URL to a remote XML file or a ZIP file containing one or multiple XML files, either from a request to an INSPIRE Spatial Data Service endpoint or a file repository. The download will be initiated after clicking on the 'Start' button. This download has a timeout of 120s.<br/><br/></span>
+            <span ng-show="select.typeResource == 'viewservice'">Please enter a getCapabilities request to your service.<br/><br/></span>
+            <span ng-show="select.typeResource == 'downloadservice' && select.downloadServiceType != 'OGC'">Please enter a getCapabilities request to your service.<br/><br/></span>
             <span ng-show="select.typeResource == 'downloadservice' && select.downloadServiceType == 'OGC'">Please enter the URL for your API landing page. Please note that the execution of the test relies on the OGC TEAM Engine. It can take up to several minutes and timeouts are possible.<br/><br/></span>
-            <span ng-show="select.typeResource == 'discoveryservice'">The system can process multiple files at once. Please enter a getCapabilities request to your service.<br/><br/></span>
-            <span ng-show="select.fileUploadType == 'upload' && select.typeResource == 'dataset'">Select one or multiple XML/GML files or ZIP files containing XML/GML files. The Maximum size of each uploaded file is 50 MB. The upload starts immediately after selecting the files. The 'Start' button is unlocked when the upload has been successfully completed.<br/><br/></span>
-            <span ng-show="select.fileUploadType == 'remote' && select.typeResource == 'dataset'">Provide a URL to remote XML/GML file or a ZIP file containing XML/GML files, either from a request to an INSPIRE Spatial Data Service endpoint or a file repository. The download will be initiated after clicking on the 'Start' button. This download has a timeout of 120s.<br/><br/></span>
+            <span ng-show="select.typeResource == 'discoveryservice'">Please enter a getCapabilities request to your service.<br/><br/></span>
+            <span ng-show="select.fileUploadType == 'upload' && select.typeResource == 'dataset'">Select an XML/GML file or a ZIP file containing one or multiple XML/GML files. The Maximum size of the uploaded file is 50 MB. The upload starts immediately after selecting the files. The 'Start' button is unlocked when the upload has been successfully completed.<br/><br/></span>
+            <span ng-show="select.fileUploadType == 'remote' && select.typeResource == 'dataset'">Provide a URL to a remote XML/GML file or a ZIP file containing one or multiple XML/GML files, either from a request to an INSPIRE Spatial Data Service endpoint or a file repository. The download will be initiated after clicking on the 'Start' button. This download has a timeout of 120s.<br/><br/></span>
             <div class="ecl-form-group">
               <div class="rTable">
                 <div class="rTableRow">
