Replaced the cookie consent v1 with the new one v2

--- a/test-run/index.html
+++ b/test-run/index.html
@@ -12,7 +12,7 @@
       cl.remove('no-js');
       cl.add('has-js');
     </script>
-    <script src="https://ec.europa.eu/wel/cookie-consent/consent.js"></script>
+	<script defer src="https://europa.eu/webtools/load.js" type="text/javascript"></script>
     <script src="../lib/angularjs/angular.min.js"></script>
     <link rel="stylesheet" href="../lib/jquery-ui/jquery-ui.min.css">
     <script src="../lib/jquery/jquery-3.6.0.min.js"></script>
@@ -41,6 +41,15 @@
   <link rel="shortcut icon" href="../favicon.ico">
   </head>
   <body ng-app="myNgValidator">
+
+	<script type="application/json">
+	{
+		"utility" : "cck",
+		"url": {
+			"en": "https://my.ec.europa.eu/cookie-policy_en"
+		}
+	}</script>
+
     <!-- paste the markup from the template here -->
     <header data-ecl-auto-init="SiteHeaderStandardised" class="ecl-site-header-standardised">
       <div class="ecl-site-header-standardised__container ecl-container">
