Changes related to issues that must be resolved by June 15th

--- a/test-selection/index.html
+++ b/test-selection/index.html
@@ -1060,7 +1060,7 @@
                 </fieldset>
                 <!-- Addresses (AD) -->
                 <fieldset aria-describedby="checkbox-default-helper" class="ecl-form-group" ng-show="select.datasetType.includes('AD')">
-                  <legend class="ecl-form-label"><br/>Select the conformance classes to be assessed for ANNEX I - Addressed (AD)</legend>
+                  <legend class="ecl-form-label"><br/>Select the conformance classes to be assessed for ANNEX I - Addresses (AD)</legend>
                   <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-ad-options-1"
                       name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexADAdvanced('inspire_gml_encoding')"/><label class="ecl-checkbox__label" for="dataset-ad-options-1"><span
                         class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
