--- a/test-selection/index.html
+++ b/test-selection/index.html
@@ -21,7 +21,6 @@
     <script src="../js/selection/externalFunctions.js"></script>
     <script src="../js/selection/app.js"></script>
     <script src="../js/selection/controller.js"></script>
-	<script defer src="https://europa.eu/webtools/load.js" type="text/javascript"></script>
     <link rel="stylesheet" href="../lib/vanillaSelectBox/vanillaSelectBox.css">
     <script src="../lib/vanillaSelectBox/vanillaSelectBox.js"></script>
 
@@ -44,13 +43,19 @@
   </head>
   <body ng-app="myNgValidator">
 
-	<script type="application/json">
+    <script type="application/json">
+		{"utility" : "cck"}
+	</script>
+	<!-- Analytics with  EU CCK v2 -->
+    <script type="application/json">
 	{
-		"utility" : "cck",
-		"url": {
-			"en": "https://ec.europa.eu/info/cookies_en"
-		}
-	}</script>
+		"utility" : "analytics",
+		"siteID" : "84c65ccc-9997-4cfa-91f3-ea0ef9d059b1",
+		"instance" : ["inspire.ec.europa.eu"],
+		"instance":"ec",
+		"mode":"auto"
+	}
+    </script>
 
     <!-- paste the markup from the template here -->
     <header data-ecl-auto-init="SiteHeaderStandardised" class="ecl-site-header-standardised">
