--- a/test-reports/details.html
+++ b/test-reports/details.html
@@ -1,7 +1,7 @@
 <html lang="en" class="no-js">
   <head>
     <meta charset="utf-8" />
-    <title>INSPIRE Validator - Test reports</title>
+    <title>INSPIRE Reference Validator - Test reports</title>
     <meta content="width=device-width,initial-scale=1" name="viewport" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
@@ -112,7 +112,7 @@
                 data-ecl-breadcrumb-core-item="static" aria-hidden="false">Test reports</li>
             </ol>
           </nav>
-          <h1 class="ecl-page-header-core__title">INSPIRE Validator - Test reports</h1>
+          <h1 class="ecl-page-header-core__title">INSPIRE Reference Validator - Test reports</h1>
           <!-- <p class="ecl-page-header-core__description">Review the results of the tests performed</p> -->
           <nav class="ecl-menu" aria-expanded="false" data-ecl-menu="true">
             <div class="ecl-menu__overlay" data-ecl-menu-overlay="true"></div>
