--- a/test-run/index.html
+++ b/test-run/index.html
@@ -1,7 +1,7 @@
 <html lang="en" class="no-js">
   <head>
     <meta charset="utf-8" />
-    <title>INSPIRE Validator - Test reports</title>
+    <title>INSPIRE Reference Validator - Test reports</title>
     <meta content="width=device-width,initial-scale=1" name="viewport" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
@@ -120,7 +120,7 @@
                 data-ecl-breadcrumb-core-item="static" aria-hidden="false">Test reports</li>
             </ol>
           </nav>
-          <h1 class="ecl-page-header-core__title">INSPIRE Validator - Test reports</h1>
+          <h1 class="ecl-page-header-core__title">INSPIRE Reference Validator - Test reports</h1>
           <!-- <p class="ecl-page-header-core__description">Review the results of the tests performed</p> -->
           <nav class="ecl-menu" aria-expanded="false" data-ecl-menu="true">
             <div class="ecl-menu__overlay" data-ecl-menu-overlay="true"></div>
@@ -195,7 +195,7 @@
                             <li class="ecl-menu__subitem" data-ecl-menu-subitem="true">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://docs.etf-validator.net/v2.0/index.html"
                                 class="ecl-menu__sublink">ETF Manuals</a></li>
                             <li class="ecl-menu__subitem" data-ecl-menu-subitem="true">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/INSPIRE-MIF/helpdesk-validator/releases/"
-                                class="ecl-menu__sublink">Download the INSPIRE Validator</a></li>
+                                class="ecl-menu__sublink">Download the INSPIRE Reference Validator</a></li>
                             <li class="ecl-menu__subitem" data-ecl-menu-subitem="true">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/INSPIRE-MIF/helpdesk-validator/tree/master/release%20strategy"
                                 class="ecl-menu__sublink">Release plan</a></li>
                       </ul>
@@ -402,7 +402,7 @@
   <div class="ecl-container ecl-footer-standardised__container">
     <section class="ecl-footer-standardised__section ecl-footer-standardised__section1"><a href=""
         class="ecl-footer-standardised__title ecl-link ecl-link--standalone">INSPIRE Reference Validator</a>
-      <div class="ecl-footer-standardised__description">The INSPIRE Validator is managed by the European Commission Joint Research Centre B6 Unit</div>
+      <div class="ecl-footer-standardised__description">The INSPIRE Reference Validator is managed by the European Commission Joint Research Centre B6 Unit</div>
     </section>
     <div class="ecl-footer-standardised__section2">
       <section class="ecl-footer-standardised__section">
@@ -438,7 +438,7 @@
         <div class="ecl-footer-standardised__title ecl-footer-standardised__title--separator">About us</div>
         <ul class="ecl-footer-standardised__list">
           <li class="ecl-footer-standardised__list-item"><a href="../about/index.html"
-              class="ecl-footer-standardised__link ecl-link ecl-link--standalone">Information about the INSPIRE Validator</a></li>
+              class="ecl-footer-standardised__link ecl-link ecl-link--standalone">Information about the INSPIRE Reference Validator</a></li>
         </ul>
       </section>
       <section class="ecl-footer-standardised__section">
