Parameterization of the hours

--- a/test-reports/index.html
+++ b/test-reports/index.html
@@ -280,7 +280,7 @@
                    <div class="rTableCell55">
                      <h2 class="ecl-u-type-heading-2 ecl-u-type-color-black ecl-u-d-none ecl-u-d-lg-block ecl-u-mv-none">Search
                        results ({{filtered.length}})</h2>
-                       <h6 class="ecl-u-type-heading-5 ecl-u-type-color-grey-75 ecl-u-d-none ecl-u-d-lg-block ecl-u-mv-none ng-binding">Test Reports are kept for a maximum of 48 hours</h6>
+                       <h6 class="ecl-u-type-heading-5 ecl-u-type-color-grey-75 ecl-u-d-none ecl-u-d-lg-block ecl-u-mv-none ng-binding">Test Reports are kept for a maximum of {{timeup}} hours</h6>
                    </div>
                    <div class="rTableCell50" style="position: absolute; right: 15px; top: 0px; width:auto; overflow: visible;">
           <div data-ecl-auto-init="Expandable" class="ecl-expandable" data-ecl-expandable="true"><button id="sortByDate" data-ecl-expandable-toggle="true" data-ecl-label-expanded="Sort by date" data-ecl-label-collapsed="Sort by date" aria-controls="advanced-options-content" aria-expanded="false" type="button" class="ecl-expandable__toggle ecl-button ecl-button--secondary"><span class="ecl-button__container"><span class="ecl-button__label" data-ecl-label="true">Sort by date</span><svg focusable="false" aria-hidden="true" data-ecl-icon="true" class="ecl-button__icon ecl-button__icon--after ecl-icon ecl-icon--fluid ecl-icon--rotate-180">
