Included additional reference to INSPIRE Reference Validator

--- a/test-run/details.html
+++ b/test-run/details.html
@@ -255,7 +255,7 @@
         <div class="ecl-footer-standardised__title ecl-footer-standardised__title--separator">About us</div>
         <ul class="ecl-footer-standardised__list">
           <li class="ecl-footer-standardised__list-item"><a href="../about/index.html"
-              class="ecl-footer-standardised__link ecl-link ecl-link--standalone">Information about the INSPIRE Validator</a></li>
+              class="ecl-footer-standardised__link ecl-link ecl-link--standalone">Information about the INSPIRE Reference Validator</a></li>
         </ul>
       </section>
       <section class="ecl-footer-standardised__section">
