Added Conformance Class 8 for metadata.

--- a/test-selection/index.html
+++ b/test-selection/index.html
@@ -347,6 +347,13 @@
                           <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
                         </svg></span>Conformance Class 2c: 'INSPIRE data sets and data set series metadata for IACS' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/metadata/2.0/iacs">source</a>)</label>
                   </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="metadata-20-dataset-options-6" 
+                    name="checkbox-default" value="conformanceclass8ds" ng-click="selectMetadataAdvancedConformanceClass8ds()"/><label class="ecl-checkbox__label" for="metadata-20-dataset-options-6"><span
+                      class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true" 
+                        class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                        <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                      </svg></span>Conformance Class 8: 'INSPIRE data sets and data set series linked service metadata' (<a target="_linkTest" href= "https://github.com/inspire-eu-validation/metadata/tree/tg-issue108/ds-linked-service">source</a>)</label>
+                  </div>
                 </fieldset>
                 <!-- 2.0 & networkservice -->
                 <fieldset aria-describedby="checkbox-default-helper" class="ecl-form-group" ng-show="select.metadataVersion == '2.0' && select.metadataRecords == 'networkservice'">
