Added min-height on test-reports-details.

--- a/test-reports/details.html
+++ b/test-reports/details.html
@@ -212,7 +212,7 @@
          $_GET[decode(arguments[1])] = decode(arguments[2]);
        });
      var id = $_GET["id"];
-	   document.write("<object type='text/html' title='test run details' data='" + serverDirectURL + "TestRuns/" + id + ".html' style='width:100%; height:70%'></object>");
+	   document.write("<object type='text/html' title='test run details' data='" + serverDirectURL + "TestRuns/" + id + ".html' style='width:100%; height:70%; min-height: 676px;'></object>");
     </script>
 
     <!-- FOOTER -->
