Change to 'T1' where 'B6' in footer

--- a/accessibilitystatement.html
+++ b/accessibilitystatement.html
@@ -375,7 +375,7 @@ crossorigin="anonymous"
     <div class="ecl-container ecl-footer-standardised__container">
         <section class="ecl-footer-standardised__section ecl-footer-standardised__section1"><a href=""
                                                                                                class="ecl-footer-standardised__title ecl-link ecl-link--standalone">INSPIRE Reference Validator</a>
-            <div class="ecl-footer-standardised__description">The INSPIRE Validator is managed by the European Commission Joint Research Centre B6 Unit</div>
+            <div class="ecl-footer-standardised__description">The INSPIRE Validator is managed by the European Commission Joint Research Centre T1 Unit</div>
             <div class="ecl-footer-standardised__section">
                 <ul class="ecl-footer-standardised__list">
                     <li class="ecl-footer-standardised__list-item"><a href="./accessibilitystatement.html"
